[gd_scene load_steps=6 format=3 uid="uid://dhy8cbfniuhqw"]

[ext_resource type="Script" path="res://src/Scripts/game_manager.gd" id="1_jl2uv"]
[ext_resource type="PackedScene" uid="uid://dgmyqu482ws7t" path="res://src/Scenes/Player.tscn" id="1_rc4ua"]
[ext_resource type="PackedScene" uid="uid://2kxndr85are3" path="res://src/Scenes/Capsule.tscn" id="2_51kqe"]
[ext_resource type="PackedScene" uid="uid://ueg1kpnu0mqg" path="res://src/Scenes/surface.tscn" id="2_qy24i"]
[ext_resource type="PackedScene" uid="uid://4g36jp4j7phv" path="res://src/Scenes/scoreboard_part.tscn" id="4_adq7y"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jl2uv")

[node name="Level" type="Node2D" parent="."]

[node name="background" type="Area2D" parent="Level"]
z_index = -5

[node name="ColorRect" type="ColorRect" parent="Level/background"]
offset_left = -72.0
offset_top = -8.0
offset_right = 712.0
offset_bottom = 368.0
color = Color(0.215686, 0.184314, 0.458824, 1)

[node name="scoreboard" type="Node2D" parent="Level"]

[node name="score1" parent="Level/scoreboard" instance=ExtResource("4_adq7y")]
position = Vector2(120, 312)

[node name="score2" parent="Level/scoreboard" instance=ExtResource("4_adq7y")]
position = Vector2(320, 312)

[node name="score3" parent="Level/scoreboard" instance=ExtResource("4_adq7y")]
position = Vector2(520, 312)

[node name="roof" parent="Level" instance=ExtResource("2_qy24i")]
position = Vector2(320, 16)

[node name="floor" parent="Level" instance=ExtResource("2_qy24i")]
position = Vector2(320, 344)

[node name="Capsule" parent="Level" instance=ExtResource("2_51kqe")]
position = Vector2(-192, 256)

[node name="Player" parent="." instance=ExtResource("1_rc4ua")]
position = Vector2(320, 176)
slide_on_ceiling = false
platform_on_leave = 1
platform_wall_layers = 2
